# UAP_ML_168

./: .pdm-python  README.md  pyproject.toml
src/: app.py  tabular.py  teks.py
