[project]
name = "uap_DeepLearning"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["streamlit>=1.41.1", "joblib>=1.4.2", "tensorflow>=2.18.0", "tensorflow-io-gcs-filesystem>=0.37.1", "scikit-learn>=1.6.0", "streamlit-option-menu>=0.4.0"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
